--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         This is a website where I show the work that I do.
     </main>
     <nav>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a student learning web development and Git!</p>
+    </section>
         
     <ul>
         <li><a href="#home">Home</a></li>
