--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
+    <footer>
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+    </footer>
 </body>
 </html>
