--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         <p>I'm a student learning web development and Git!</p>
     </section>
 
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: your.email@example.com</p>
+    </section>
 
-    
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
